<resources>
    <string name="app_name">Udhamini</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text_abhishek">Abhishek</string>
    <string name="text_website">AndroidDeft.Com</string>

    <string name="scholarshipTitle">Title</string>
    <string name="scholarshipDescription">Description</string>
    <string name="scholarshipLevelOfStudyH">Level Of Study</string>
    <string name="scholarshipProgramType">Program Type</string>
    <string name="scholarshipCountry">Country</string>
    <string name="scholarshipCounty">County</string>
    <string name="scholarshipSubCounty">Sub County</string>
    <string name="scholarshipDateline">Date Line</string>
    <string name="scholarshipApply">Apply</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
